Fixed long buttons wrapping

--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -114,7 +114,7 @@ h2 {
 
 	.row {
 		display: flex;
-		flex-wrap: nowrap;
+		flex-wrap: wrap;
 		flex: 1 0 100%;
 
 		&>* {
